--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/shop/style.css" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/popup.js"></script>
     <script type="text/javascript" src="/js/shop/airbum.common.js"></script>
 {% block js %}{% endblock %}
     <!--[if IE 6]>
