--- a/tag/templates/tag.htm
+++ b/tag/templates/tag.htm
@@ -28,8 +28,8 @@
 {% endfor %}
                     </div>
                     <div class="vote">
-                        <a class="btnLike" href="/ajax/like/?i=8754">喜欢</a>
-                        <a class="btnReplay" href="/cart/buy/?i=2312" onclick="buyBtn();return false;">购买(<span>0</span>)</a>
+                        <a class="btnLike" href="/ajax/like/8754/">喜欢</a>
+                        <a class="btnReplay" href="/ajax/itemattr/1{{ i.itemName.id }}/">购买(<span>0</span>)</a>
                     </div>
                 </div>
             </li>
