--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -8,10 +8,11 @@
     {% block meta %}{% endblock %}
     <link rel="stylesheet" href="/css/shop/base.css" />
     <link rel="stylesheet" href="/css/shop/style.css" />
+    <link rel="stylesheet" href="/css/shop/popup.css" />    
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <script type="text/javascript" src="/js/popup.js"></script>
-    <script type="text/javascript" src="/js/shop/airbum.common.js"></script>
+    <script type="text/javascript" src="/js/shop/common.configuration.js"></script>
 {% block js %}{% endblock %}
     <!--[if IE 6]>
     <script type="text/javascript" src="/js/DD_belatedPNG.js"></script>
