--- a/shop/templates/shop.htm
+++ b/shop/templates/shop.htm
@@ -2,6 +2,11 @@
 
 {% block title %}{{ title }}{% endblock %}
 
+{% block js %}
+    <script type="text/javascript" src="/js/shop/shop.configuration.js"></script>
+{% endblock %}
+
+
 {% block scrollBox %}
     <div class="scrollBox">
         <div id="fadeFocus" style="display: block;">
@@ -17,7 +22,6 @@
 {% endblock %}
 
 {% block content %}
-    <script src="/js/shop/airbum.timeline.js" type="text/javascript"></script>
     <div class="pinStream clearfix">
 {% for line in itemList %}{% for list in line %}
         <div class="{{ list.cssClass }}">
