修改购物车 以及重构前端弹出层
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/cart/templates/cart.htm
+++ b/cart/templates/cart.htm
@@ -1,5 +1,7 @@
 {% extends "shop.base.htm" %}
 
+{% block title %}购物车{% endblock %}
+
 {% block js %}
     <script type="text/javascript" src="/js/shop/cart.configuration.js"></script>
 {% endblock %}
