--- a/tag/templates/tag.htm
+++ b/tag/templates/tag.htm
@@ -1,7 +1,5 @@
 {% extends "shop.base.htm" %}
 
-{% block title %}香浓巧克力{% endblock %}
-
 {% block js %}
     <script type="text/javascript" src="/js/shop/tag.configuration.js"></script>
 {% endblock %}
@@ -42,73 +40,73 @@
             <h3>销售记录</h3>
             <ul class="user list_album_user">
                 <li>
-                    <a href="6577714">
+                    <a href="/tag/德国烤奶酪/">
                         <img width="210" height="157" src="/m/3133002s.jpg" alt="德国烤奶酪" />
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
-                    <a href="baobaoblue">
+                    <a href="/tag/香浓巧克力/">
                         <img width="210" height="157" src="/m/3133001s.jpg" alt="香浓巧克力" />
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
-                    <a href="6172271">
+                    <a href="/tag/">
                         <img width="210" height="157" src="/m/3133003s.jpg" alt="七色地图">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
-                    <a href="z973079527">
+                    <a href="/tag/">
                         <img width="210" height="157" src="/m/3133004b.jpg" alt="市井布衣">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
-                    <a href="kuyinzi">
+                    <a href="/tag/">
                         <img width="210" height="157" src="/m/3155002b.jpg" alt="库因兹">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
-                    <a href="yshengtai">
+                    <a href="/tag/">
                         <img width="210" height="157" src="/m/3177008b.jpg" alt="原生泰">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
-                    <a href="6576874">
+                    <a href="/tag/">
                         <img width="210" height="157" src="/m/3177012b.jpg" alt="笑微微">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
-                    <a href="5274917">
+                    <a href="/tag/">
                         <img width="210" height="157" src="/m/3166006b.jpg" alt="陈金成">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
-                    <a href="442438">
+                    <a href="/tag/">
                         <img width="210" height="157" src="/m/3199002b.jpg" alt="陈思梦">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
-                    <a href="5981236">
+                    <a href="/tag/">
                         <img width="210" height="157" src="/m/3177004b.jpg" alt="慕蓉香">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
-                    <a href="alot">
+                    <a href="/tag/">
                         <img width="210" height="157" src="/m/3199004b.jpg" alt="阿骆">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
-                    <a href="lleo">
+                    <a href="/tag/">
                         <img width="210" height="157" src="/m/3133012s.jpg" alt="lLeo">
                     </a>
                     <span class="username fl">151****45</span>
