--- a/cart/templates/consignee.htm
+++ b/cart/templates/consignee.htm
@@ -1,26 +1,33 @@
 {% extends "shop.base.htm" %}
 
+{% block title %}收货人信息{% endblock %}
+
+{% block js %}
+    <script type="text/javascript" src="/js/shop/consignee.configuration.js"></script>
+{% endblock %}
+
 {% block content %}
         <div class="pWhite">
             <div class="mBottom50">
                 <h3>收货人信息</h3>
                 <p>（请填写详细收货地址及准确的最佳送货时间，以便更快捷将您订购的蛋糕送达！）</p>
-                <form action="/checkout/" method="post" name="checkout" class="checkout">
+                <form action="/checkout/" method="post" name="checkout" id="checkout">
                     <table width="100%">
                         <tr>
                             <td align="right">支付方式:</td>
-                            <td colspan="3">
-                                <select name="pid">
-                                    <option value="1">支付宝</option>
-                                    <option value="2" selected>货到付款</option>
+                            <td>
+                                <select name="pay" class="pay">
+{% for i in pay %}
+                                    <option value="{{ i.id }}">{{ i.name }}</option>
+{% endfor %}
                                 </select>
                                 (必填)
                             </td>
                         </tr>
                         <tr>
                             <td align="right">配送方式:</td>
-                            <td colspan="3">
-                                <select name="sid">
+                            <td>
+                                <select name="ship" class="ship">
                                     <option value="1" selected>送货上门</option>
                                 </select>
                                 (必填)
@@ -28,16 +35,16 @@
                         </tr>
                         <tr>
                             <td align="right">收货人姓名:</td>
-                            <td align="left"><input name="consignee" type="text" value="韦超" /> (必填)</td>
+                            <td><input name="consignee" type="text" value="{{ request.user.userinfo.consignee|default:request.session.c.consignee }}" class="consignee" /> (必填)</td>
                         </tr>
                         <tr>
                             <td align="right">配送区域:</td>
-                            <td colspan="3">
+                            <td>
                                 <select name="city" class="city">
                                     <option value="0">请选择城市</option>
                                     <option value="1" selected>南宁</option>
                                 </select>
-                                <select name="block">
+                                <select name="block" class="block">
                                     <option value="0">请选择区域</option>
                                     <option value="2" selected>邕宁区</option>
                                     <option value="3" >青秀区</option>
@@ -51,20 +58,20 @@
                         </tr>
                         <tr>
                             <td align="right">详细地址:</td>
-                            <td align="left" width="90%"><input name="address" type="text" value="南宁市桂雅路1号联盟新城一号楼119室" size="70" /> (必填)</td>
+                            <td width="90%"><input name="address" type="text" value="{{ request.user.userinfo.address|default:request.session.c.address }}" size="70" class="address" /> (必填)</td>
                         </tr>
                         <tr>
                             <td align="right">联系电话:</td>
-                            <td align="left"><input name="tel" type="text" value="15177788120" size="40" /> (必填)  ( 请填写多个号码，并用空格隔开。如：134XXXXXXXX 0771XXXXXXX )</td>
+                            <td><input name="tel" type="text" value="{{ request.user.userinfo.tel|default:request.session.c.tel }}" size="40" class="tel" /> (必填)  ( 请填写多个号码，并用空格隔开。如：134XXXXXXXX 0771XXXXXXX )</td>
                         </tr>
                         <tr>
                             <td align="right">最佳收货时间:</td>
-                            <td align="left">
-                                <input name="best_date" type="text" class="best_date" value="2013-01-17" />
-                                <select name="best_time">
+                            <td>
+                                <input name="date" type="text" value="{% if request.session.date %}{{ request.session.date|date:"Y-m-d" }}{% else %}{% now "Y-m-d" %}{% endif %}" class="date" />
+                                <select name="time" class="time">
                                     <option value="10:00 ~ 11:00" >10:00 ~ 11:00</option>
                                     <option value="11:00 ~ 12:00" >11:00 ~ 12:00</option>
-                                    <option value="12:00 ~ 13:00" selected>12:00 ~ 13:00</option>
+                                    <option value="12:00 ~ 13:00" >12:00 ~ 13:00</option>
                                     <option value="13:00 ~ 14:00" >13:00 ~ 14:00</option>
                                     <option value="14:00 ~ 15:00" >14:00 ~ 15:00</option>
                                     <option value="15:00 ~ 16:00" >15:00 ~ 16:00</option>
@@ -78,14 +85,12 @@
                         </tr>
                         <tr>
                             <td align="right" valign="top">备注:</td>
-                            <td align="left" width="90%"><textarea name="postscript" cols="100" rows="4" style="border:1px solid #CCC;color: #CCCCCC;">您可以在此填写您是否需要生日牌、祝福语（20字以内）以及关于订单的任何疑问、要求等。如：我不希望你们和收货人联系，我要给收货人一个惊喜。具体的联系我的电话：158xxxxxxxx。</textarea></td>
+                            <td width="90%"><textarea name="note" cols="100" rows="4" class="note">{{ request.user.userinfo.note|default:request.session.c.note }}</textarea></td>
                         </tr>
                     </table>
                     <center>
                         <input type="submit" name="submit" value="确认" class="btnB bBtn" />
-                        <!-- <input type="button" name="button" value="返回" class="btnB bBtn" /> -->
                     </center>
-                    <input type="hidden" name="aid" value="2">
                 </form>
             </div>
         </div>
