--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -105,7 +105,7 @@
           <ul>
             <li><a href="/item/admin/">商品</a></li>
             <li><a href="/tag/admin/">标签</a></li>
-            <li><a href="/specification/">规格</a></li>
+            <li><a href="/spec/">规格</a></li>
             <li><a href="/price/">价格</a></li>
             <li><a href="/slide/">首页幻灯片</a></li>
             <li><a href="/payment/">支付方式</a></li>
