--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -103,15 +103,15 @@
         <a href="/system/" class="nav">系统设置</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/item/admin/">商品</a></li>
-            <li><a href="/tag/admin/">标签</a></li>
-            <li><a href="/spec/">规格</a></li>
-            <li><a href="/price/">价格</a></li>
+            <li><a href="/item/item/">商品</a></li>
+            <li><a href="/item/spec/">规格</a></li>
+            <li><a href="/item/price/">价格</a></li>
+            <li><a href="/tag/tag/">标签</a></li>
             <li><a href="/slide/">首页幻灯片</a></li>
             <li><a href="/payment/">支付方式</a></li>
             <li><a href="/area/">配送区域</a></li>
-            <li><a href="/signtime/">收货时间</a></li>
-            <li><a href="/logistics/">物流时间</a></li>
+            <li><a href="/signtime/time/">收货时间</a></li>
+            <li><a href="/logistics/time/">物流时间</a></li>
             <li><a href="/filecheck/">文件校验</a></li>
           </ul>
         </div>
