--- a/static/css/office/style.css
+++ b/static/css/office/style.css
@@ -298,38 +298,41 @@ a.button:active{
   color:#9D7250;
 }
 
-/* #content input{
-  vertical-align: -10%;
-} */
-
-/* #content img{
-  vertical-align: text-decoration;
-} */
-
 #content h3{
   padding:3px;
 }
 
-#content #search{
+#content #tool{
   background:#F4FAFB;
   border:1px solid #BBDDE5;
   color:#9CACAF;
   font-size:14px;
-  padding:2px 10px 7px 10px;
+  padding:7px 10px;
   margin:0 0 10px 0;
 }
 
-#content #search img,
-#content #search select,
-#content #search input
+#content #tool img,
+#content #tool select,
+#content #tool input
 {
   vertical-align:bottom;
 }
 
-#content #search button,
-#content #search span
+#content #tool button,
+#content #tool span
 {
   vertical-align:-65%;
+}
+
+#content #tool .action{
+  float: right;
+  position: relative;
+  top:-23px;
+}
+
+#content #tool li{
+  float: left;
+  line-height: 22px;
 }
 
 #content table button
@@ -337,47 +340,6 @@ a.button:active{
   vertical-align:-20%;
 }
 
-#content #search .button{
-  vertical-align:-55%;
-}
-
-#content #actionTool{
-  display:block;
-  height:24px;
-  background: #F4FAFB;
-  border: 1px solid #BBDDE5;
-  color: #9CACAF;
-  padding:7px 10px 7px 10px;
-  margin: 0 0 10px 0;
-}
-
-#content #actionTool a{
-  color: #666;
-  font-size: 12px;
-  display:block;
-  float:right;
-  padding:2px 5px 2px 5px;
-  *padding:4px 5px 2px 5px;
-  margin:0 5px 0 5px;
-  border:1px solid #278296;
-  border-right:2px solid #278296;
-  border-bottom:2px solid #278296;
-  background:#DDEEF2;
-}
-
-#content #actionTool a:active{
-  color: #666;
-  font-size: 12px;
-  display:block;
-  float:right;
-  padding:2px 5px 2px 5px;
-  *padding:4px 5px 2px 5px;
-  margin:0 5px 0 5px;
-  border:1px solid #278296;
-  border-top:2px solid #278296;
-  border-left:2px solid #278296;
-  background:#DDEEF2;
-}
 
 #content #pageSize{
   vertical-align:-10%;
