--- a/cart/templates/consignee.htm
+++ b/cart/templates/consignee.htm
@@ -16,36 +16,41 @@
                         <tr>
                             <td align="right">支付方式:</td>
                             <td>
-                                <select name="pay" class="pay">
+                                <select name="pay" id="pay">
+                                    <option value="0"{% if not request.session.c.pay|floatformat %} selected{% endif %}>请选择支付方式</option>
 {% for i in pay %}
-                                    <option value="{{ i.id }}"{% ifequal i.id|floatformat request.session.c.pay %} selected{% endifequal %}>{{ i.name }}</option>
+                                    <option value="{{ i.id }}"{% ifequal i.id|floatformat request.session.c.pay %} selected{% endifequal %} >{{ i.name }}</option>
 {% endfor %}
                                 </select>
-                                (必填)
                             </td>
                         </tr>
                         <tr>
                             <td align="right">配送方式:</td>
                             <td>
-                                <select name="ship" class="ship">
+                                <select name="ship" id="ship">
+                                    <option value="0"{% if not request.session.c.ship %} selected{% endif %}>请选择支付方式</option>
                                     <option value="1">送货上门</option>
                                 </select>
-                                (必填)
                             </td>
                         </tr>
                         <tr>
                             <td align="right">收货人姓名:</td>
-                            <td><input name="consignee" type="text" value="{{ request.user.userinfo.consignee|default:request.session.c.consignee }}" class="consignee" /> (必填)</td>
+                            <td><input name="consignee" type="text" value="{{ request.user.userinfo.consignee|default:request.session.c.consignee }}" id="consignee" /></td>
+                        </tr>
+                        <tr>
+                            <td align="right">配送城市:</td>
+                            <td>
+                                <select name="city" id="city">
+                                    <option value="0"{% if not request.session.c.city %} selected{% endif %}>请选择城市</option>
+                                    <option value="1">南宁</option>
+                                </select>
+                            </td>
                         </tr>
                         <tr>
                             <td align="right">配送区域:</td>
                             <td>
-                                <select name="city" class="city">
-                                    <option value="0">请选择城市</option>
-                                    <option value="1">南宁</option>
-                                </select>
-                                <select name="block" class="block">
-                                    <option value="0">请选择区域</option>
+                                <select name="block" id="block">
+                                    <option value="0"{% if not request.session.c.block %} selected{% endif %}>请选择区域</option>
                                     <option value="2">邕宁区</option>
                                     <option value="3">青秀区</option>
                                     <option value="4">兴宁区</option>
@@ -53,22 +58,27 @@
                                     <option value="6">西乡塘区</option>
                                     <option value="7">江南区</option>
                                 </select>
-                                (必填)
                             </td>
                         </tr>
                         <tr>
                             <td align="right">详细地址:</td>
-                            <td width="90%"><input name="address" type="text" value="{{ request.user.userinfo.address|default:request.session.c.address }}" size="70" class="address" /> (必填)</td>
+                            <td width="90%"><input name="address" type="text" value="{{ request.user.userinfo.address|default:request.session.c.address }}" size="70" id="address" /></td>
                         </tr>
                         <tr>
                             <td align="right">联系电话:</td>
-                            <td><input name="tel" type="text" value="{{ request.user.userinfo.tel|default:request.session.c.tel }}" size="40" class="tel" /> (必填)  ( 请填写多个号码，并用空格隔开。如：134XXXXXXXX 0771XXXXXXX )</td>
+                            <td><input name="tel" type="text" value="{{ request.user.userinfo.tel|default:request.session.c.tel }}" size="40" id="tel" />  ( 请填写多个号码，并用空格隔开。如：134XXXXXXXX 0771XXXXXXX )</td>
+                        </tr>
+                        <tr>
+                            <td align="right">最佳收货日期:</td>
+                            <td>
+                                <input name="date" type="text" value="{% if request.session.date %}{{ request.session.date|date:"Y-m-d" }}{% else %}{% now "Y-m-d" %}{% endif %}" id="date" />
+                            </td>
                         </tr>
                         <tr>
                             <td align="right">最佳收货时间:</td>
                             <td>
-                                <input name="date" type="text" value="{% if request.session.date %}{{ request.session.date|date:"Y-m-d" }}{% else %}{% now "Y-m-d" %}{% endif %}" class="date" />
-                                <select name="time" class="time">
+                                <select name="time" id="time">
+                                    <option value="0"{% if not request.session.c.time %} selected{% endif %}>请选择时间</option>
                                     <option value="10:00 ~ 11:00" >10:00 ~ 11:00</option>
                                     <option value="11:00 ~ 12:00" >11:00 ~ 12:00</option>
                                     <option value="12:00 ~ 13:00" >12:00 ~ 13:00</option>
@@ -80,12 +90,11 @@
                                     <option value="18:00 ~ 19:00" >18:00 ~ 19:00</option>
                                     <option value="19:00 ~ 20:00" >19:00 ~ 20:00</option>
                                 </select>
-                                (必填)
                             </td>
                         </tr>
                         <tr>
                             <td align="right" valign="top">备注:</td>
-                            <td width="90%"><textarea name="note" cols="100" rows="4" class="note">{{ request.user.userinfo.note|default:request.session.c.note }}</textarea></td>
+                            <td width="90%"><textarea name="note" cols="100" rows="4" id="note">{{ request.user.userinfo.note|default:request.session.c.note }}</textarea></td>
                         </tr>
                     </table>
                     <center>
