--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="/css/shop/base.css" />
     <link rel="stylesheet" href="/css/shop/style.css" />
     <link rel="stylesheet" href="/css/jquery.zebra_datepicker.css" />
+    <link rel="stylesheet" href="/css/jquery.jgd.dropdown.min.css" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <script type="text/javascript" src="/js/jquery.zebra_datepicker.js"></script>
     <script type="text/javascript" src="/js/jquery.dialog.js"></script>
+    <script type="text/javascript" src="/js/jquery.jgd.dropdown.js"></script>
     <script type="text/javascript" src="/js/shop/base.configuration.js"></script>
 {% block js %}{% endblock %}
     <!--[if IE 6]>
@@ -113,10 +115,10 @@
     <div id="footer">
         <div class="other">
             <ul>
-                <li><a href="http://wpa.qq.com/msgrd?V=3&amp;uin=672592854&amp;site=31客&amp;menu=yes" target="_blank"><img src="http://wpa.qq.com/pa?p=1:672592854:4" height="16" border="0" alt="QQ" />672592854</a></li>
+<!--                 <li><a href="http://wpa.qq.com/msgrd?V=3&amp;uin=672592854&amp;site=31客&amp;menu=yes" target="_blank"><img src="http://wpa.qq.com/pa?p=1:672592854:4" height="16" border="0" alt="QQ" />672592854</a></li>
                 <li><a href="http://wpa.qq.com/msgrd?V=3&amp;uin=2310857615&amp;site=31客&amp;menu=yes" target="_blank"><img src="http://wpa.qq.com/pa?p=1:2310857615:4" height="16" border="0" alt="QQ" />2310857615</a></li>
                 <li><a href="http://wpa.qq.com/msgrd?V=3&amp;uin=2605043362&amp;site=31客&amp;menu=yes" target="_blank"><img src="http://wpa.qq.com/pa?p=1:2605043362:4" height="16" border="0" alt="QQ" />2605043362</a></li>
-                <li><a href="http://sae.sina.com.cn" target="_blank"><img src="http://static.sae.sina.com.cn/image/poweredby/117X12px.gif" title="Powered by Sina App Engine"></a></li>
+                <li><a href="http://sae.sina.com.cn" target="_blank"><img src="http://static.sae.sina.com.cn/image/poweredby/117X12px.gif" title="Powered by Sina App Engine"></a></li> -->
                 <li><a href="home/about">订购专线: 4000-5927-31 | 客服电话：0771-5676753</a></li>
                 <li><a target="_blank" href="http://www.miibeian.gov.cn/">桂ICP备12002164号</a></li>
             </ul>
